--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 
 spring.application.name=product-api
-server.port=$PORT
+server.port=8080
 #eureka.client.service-url.default-zone=http://localhost:8761/eureka/
 
 #spring.cloud.config.uri=http://localhost:8888
